--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -4,6 +4,6 @@ jdbc.username=root
 jdbc.password=root
 
 basePackage=com.lhx.webfm
-jspPath=/WEB-INF/jsp
+jspPath=/WEB-INF/jsp/
 #静态资源的基础路径，比如js、css、图片等
 assetPath=/asset/
